workloads/eks-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "eks-example"
  namespace: "eks-example"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/inbound-cidrs: 84.20.213.254/32
  labels:
    app: eks-example
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "eks-example"
              servicePort: 80
